2009-02-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-task-navigator.c: Modified task navigator tourette's
	* src/home/hd-title-bar.c
	* src/mb/hd-theme.h:
	Used correct shape 'pressed' button NB#102652
	* src/tidy/tidy-blur-group.c:
	Modified vignette effect to Martin's spec
	* src/tidy/tidy-mem-texture.c:
	Removed exact row length in preparation for new SGX (Clutter will make
	sure it still works)
	* data/Makefile.am
	* data/transitions.ini:
	Added file to describe length of transitions
	* src/util/hd-transition.c
	* src/util/hd-transition.h:
	Added functions to read settings from transitions.ini
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-grid.c:
	Use hd-transition code to set animation lengths, tweaked animations to
	Martin's spec
	* src/home/hd-render-manager.c:
	Tidying animation code, loading animation details from transitions.ini

2009-02-23  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Remove connection from HdLauncherApp to HdCompMgrClient.
	Fixes: NB#102086

	* src/home/hd-switcher.c: Changed handling of relaunching to use the new
	function.
	* src/home/hd-task-navigator.c: Added function to look for the appropiate
	actor for an app.
	* src/home/hd-task-navigator.h:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher-app.c: Removed methods for getting and setting
	the main_comp_mgr_client.
	* src/launcher/hd-launcher-app.h:
	* src/mb/hd-comp-mgr.c: Set a property on each window actor with the app
	id.

2009-02-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.21

2009-02-21  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c
	  (hd_home_view_container_update_active_views): Fix selection of new
	  current view. Fixes: NB#102458
	  (hd_home_view_container_constructed): Start to monitor
	  ~/.backgrounds in constructed.
	* debian/changelog: Update.

2009-02-20  Thomas Thurman  <thomas.thurman@collabora.co.uk>
