@@ -3,8 +3,5 @@ SUBDIRS = icons desktop
 resdir = $(datadir)/hildon-desktop
 res_DATA = \
 	menu-button.png \
-	edit-button.png \
-	launcher-button-highlight.png \
-        blank-window.png \
 	white-particle.png \
 	transitions.ini
